Modificacion del application.properties, y creacion del archivo system.properties para la configuracion de Railway

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,10 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.application.name=repasoPOOBasico9PracticaApiRest
 
-## Se configura el puerto por el que queremos que se ejecute
-server.port=8080
+## Se configura el puerto por el que queremos que se ejecute, pero no se deja como un puerto fijo, sino
+## para que Railway lo maneje, Esto le dice a Spring: "Usa el puerto que te asigne Railway, y si
+## no hay ninguno (como en local), usa el 8080"
+server.port=${PORT:8080}
 
 
 ## Se configuran las variables para hacer la connexion con la base de datos
